client/src/App.css
body {
  padding-top: 20px;
}

a:not(.disabled) {
  color: #cc9543 !important;
}

.nav-link:not(.disabled) {
  color: #cc9543 !important;
}

.invalid-credentials {
  font-size: 10pt;
  color: red;
  margin-top: 8px;
}
.upvote, .downvote {
  font-size: 20pt;
  color: #afa9a9;
  cursor: pointer;
}

.upvote.active {
  color: #399c0e
}

.downvote.active {
  color: #2c6eb1
}

.vote-controller {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between !important;
  transform: scale(0.8)
}

.score {
  font-size: 15pt;
}

.post-card-img {
  max-width: 75px;
  height: 75px;
  margin-top: 12px;
  object-fit: cover;
}

.comment-list {
  margin-top: 10px;
}

.vote-comment {
  transform: scale(.7)
}

.vote-controller-container {
  padding-right: 0px !important;
}

.vote-post-controller {
  padding: 0px !important;
}

.comment div {
  padding: 0px;
}

.comment-info {
  font-size: 11pt !important;
}

.comment-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  border-bottom: 1px solid rgb(220, 220, 220);
}

.post-list div {
  padding-left: 0px;
}

.post-card {
  padding-left: 0px !important;
  padding-right: 0px !important;
  margin-bottom: 5px;
  margin-left: 0px !important;
  padding-bottom: 10px;
  border-bottom: 1px solid rgb(220, 220, 220);
}

.post-card-info {
  font-size: 9pt
}

.post-card-title a {
  color: black !important;
  font-size: 11pt;
  text-decoration: none !important;
}

.content-controls {
  display: flex;
  flex-direction: row;
  font-size: 9pt;
  align-items: center;
}

.control-button {
  color: #cc9543;
  border: none;
  background: none;
  padding-left: 0px;
  padding-right: 0px;
  margin-right: 5px;
}

.control-button:hover {
  text-decoration: underline;
}

.control-button:focus {
  outline: none;
}

.post-info {
  font-size: 10pt;
}

.post-title {
  color: black;
}
.post-image {
  max-width: 100%;
}


.indent-2 {
  margin-left: 10px !important;
}

.indent-3 {
  margin-left: 15px !important;
}

.indent-4 {
  margin-left: 20px !important;
}

.indent-5 {
  margin-left: 25px !important;
}

.indent-6 {
  margin-left: 30px !important;
}

